<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_menu_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_button_text"></Button>

            <Button
                android:id="@+id/main_menu_word_bank_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_word_bank_button_text"></Button>

            <Button
                android:id="@+id/main_menu_options_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_options_button_text"></Button>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
