<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetSudokuSizeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:text="Select Size"
            android:textSize="36sp"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_4x4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_4x4"/>

            <Button
                android:id="@+id/btn_6x6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_6x6"/>

            <Button
                android:id="@+id/btn_9x9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_9x9"/>

            <Button
                android:id="@+id/btn_12x12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_12x12"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>