<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.WordListsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:text="@string/activity_main_word_bank_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/create_new_word_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_word_bank_create_new_list" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:text="@string/activity_main_word_bank_existing_words"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.example.sudokuvocabulary.views.WordListsView
            android:id="@+id/existing_word_lists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </com.example.sudokuvocabulary.views.WordListsView>

    </LinearLayout>

</RelativeLayout>