<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/animal_category_prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:text="@string/back_button_text"
            android:textSize="14sp"></Button>

        <Button
            android:id="@+id/display_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:text="display list"
            android:textSize="14sp"></Button>

        <Button
            android:id="@+id/animal_category_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:text="@string/play_button_text"
            android:textSize="14sp"></Button>
    </LinearLayout>

    <TextView
        android:id="@+id/category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:id="@+id/gray_box"
        android:layout_width="370dp"
        android:layout_height="525dp"
        android:layout_margin="10dp"
        android:background="@drawable/box"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/box"
            android:gravity="top|left"
            android:text="@string/activity_word_category_select_animals"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableLayout
                android:id="@+id/table_for_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:stretchColumns="*">

            </TableLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>